--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blessed": "0.0.43",
-    "exec": "^0.1.3",
-    "glob": "^4.3.5",
+    "blessed": "^0.1.81",
+    "glob": "^7.2.3",
     "imessagemodule": "0.2.3",
-    "sqlite3": "^4.0.4"
+    "sqlite3": "^5.1.7"
   }
 }
